--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,8 @@ p.bio {
 
     html,
     body {
-        -webkit-box-shadow: none;
-        box-shadow: none;
+        -webkit-box-shadow: inset 0px -8px 0px 0px var(--accent);
+        box-shadow: inset 0px -8px 0px 0px var(--accent);
     }
 
     .profile {
@@ -338,7 +338,6 @@ p.bio {
         font-size: 10px;
         padding: 8px 24px 8px 32px;
         border-right: none;
-        border-bottom: none;
     }
 
     .heart {
