minor styling update

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ p.bio {
 .contact-text-link {
     color: var(--primary);
     text-decoration: none;
+    /* text-decoration-skip: spaces; */
     border-bottom: 2px solid var(--accent);
 }
 
