--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,15 @@ body {
     box-shadow: inset 0px 0px 0px 8px var(--accent);
     color: var(--primary);
     font-family: var(--font-base-sans);
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     margin: 0px;
     width: 100%;
-    height: 100vh;
+    position: absolute;
+    min-height: 100vh;
+    overflow: scroll;
     perspective: 1000px;
     perspective-origin: 50% 50%;
     -webkit-animation: animation 300s linear infinite;
@@ -56,13 +58,19 @@ body {
 
 /* page styles */
 
+.hr {
+    background-color: var(--accent);
+    height: 2px;
+    margin: 40px 0;
+}
+
 .profile {
     background: var(--secondary);
     border: 8px solid var(--accent);
     box-shadow: var(--shadow-high);
     padding: 80px 64px 56px;
-    margin: 60px;
-    max-width: 800px;
+    margin: 120px 60px;
+    max-width: 1200px;
 }
 
 .heroes {
@@ -106,8 +114,6 @@ h2.title {
 
 .body {
     display: flex;
-    padding-top: 40px;
-    border-top: 2px solid var(--accent);
 }
 
 p.bio {
@@ -185,6 +191,72 @@ p.bio {
     height: 16px;
     padding: 0 6px;
 }
+
+/* project preview styles */
+
+.work {
+    /* border-top: 2px solid var(--accent); */
+    /* padding-top: 72px; */
+}
+
+
+.project-preview {
+    background-color: var(--accent);
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 24px 12px;
+}
+
+.project-preview>h3 {
+    font-size: 24px;
+    text-align: center;
+}
+
+.btn-custom,
+.btn-custom:focus {
+    background-color: var(--secondary);
+    border-color: var(--primary);
+    color: var(--primary);
+}
+
+.btn-custom:hover,
+.btn-custom:active {
+    background-color: var(--primary);
+    border-color: var(--primary);
+    color: var(--secondary);
+}
+
+
+/* modal styles */
+
+.modal {
+    color: var(--secondary);
+}
+
+h5.modal-title {
+    font-family: var(--font-display);
+    font-size: 48px;
+}
+
+h6.modal-subhead {
+    color: var(--accent);
+    text-transform: uppercase;
+}
+
+
+/* client styles */
+.client-logo {
+    /* border-bottom: 2px solid var(--accent); */
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    height: 140px;
+    padding: 40px;
+}
+
 
 /* animations */
 
