--- a/css/projects.css
+++ b/css/projects.css
@@ -38,6 +38,11 @@ h2 {
     text-transform: uppercase;
 }
 
+.project-title {
+    font-size: 36px;
+    font-family: var(--font-display);
+}
+
 ul {
     list-style: none;
 }
@@ -276,10 +281,7 @@ a:hover {
 /* monster project styles */
 
 .monster-image-container {
-    background-color: #ffffff;
-    background-color: #e9e9e9;
-    /* background-color: #323232; */
-    /* border-radius: 32px; */
+    background-color: #f2f1f1;
     overflow: hidden;
 }
 
@@ -311,7 +313,7 @@ a:hover {
 /* visual design project styles */
 
 .visual-design-image-container {
-    background-color: #e9e9e9;
+    background-color: #f2f1f1;
     border-radius: 32px;
     overflow: hidden;
 }
