--- a/css/projects.css
+++ b/css/projects.css
@@ -47,8 +47,25 @@ ul {
     list-style: none;
 }
 
-li::before {
+ul>li::before {
     content: "• ";
+    color: var(--accent);
+    display: inline-block;
+    width: 1em;
+    margin-left: -1.2em;
+}
+
+ol {
+    list-style: none;
+    counter-reset: custom-counter;
+}
+
+ol>li {
+    counter-increment: custom-counter;
+}
+
+ol>li::before {
+    content: counter(custom-counter)". ";
     color: var(--accent);
     display: inline-block;
     width: 1em;
@@ -119,16 +136,8 @@ a:hover {
     box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* shoppingmobileapp styles */
-
-.shoppingmobileapp-image-container {
-    background-color: #EBFFFE;
-    background: url(/images/project-images/shopping-background.svg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    border-radius: 32px;
+.white-text {
+    color: #ffffff;
 }
 
 .context-box {
@@ -139,26 +148,16 @@ a:hover {
     margin-bottom: 16px;
 }
 
-.context-box>h2 {
-    font-size: 24px;
-    text-transform: none;
-    color: #ffffff;
-    text-align: center;
-}
+/* shoppingmobileapp styles */
 
-.context-box>p {
-    font-size: 16px;
-    color: #ffffff;
-}
-
-.context-box>ul>li {
-    font-size: 14px;
-    color: #ffffff;
-    padding-top: 16px;
-}
-
-.context-box>ul>li::before {
-    color: var(--grey-med);
+.shoppingmobileapp-image-container {
+    background-color: #F7F2E3;
+    background: url(/images/project-images/shopping-background.svg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    border-radius: 32px;
 }
 
 /* huey styles */
@@ -230,6 +229,14 @@ a:hover {
 }
 
 /* generator styles */
+
+.text-off-white1 {
+    color: #F7F2E3;
+}
+
+.text-off-white2 {
+    color: #EBDEBA;
+}
 
 .round-corners {
     border-radius: 24px;
