--- a/css/projects.css
+++ b/css/projects.css
@@ -18,6 +18,29 @@ body {
     font-family: var(--font-base-sans);
 }
 
+html {
+    scroll-padding-top: 105px;
+    margin-top: 105px;
+}
+
+.modal-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #ffffff;
+    z-index: 1;
+    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05), 0px 4px 8px rgba(0, 0, 0, 0.05);
+}
+
+.header-content {
+    max-width: 1200px;
+}
+
+.footer-content {
+    max-width: 1200px;
+}
+
 .container-fluid {
     max-width: 1200px;
 }
