--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ body {
 
 .profile-img {
     width: 180px;
+    height: 180px;
     border-radius: 50%;
     border: 8px solid var(--accent);
     box-shadow: var(--shadow-low);
@@ -466,6 +467,7 @@ textarea:focus {
 
     .profile-img {
         width: 120px;
+        height: 120px;
         margin-top: -10px;
     }
 
@@ -516,6 +518,7 @@ textarea:focus {
 
     .profile-img {
         width: 90px;
+        height: 90px;
         margin-top: -15px;
         border: 6px solid var(--accent);
         position: absolute;
