--- a/css/styles.css
+++ b/css/styles.css
@@ -76,9 +76,10 @@ body {
     font-size: 20px;
     color: var(--secondary);
     background-color: var(--primary);
-    border-radius: 50px;
+    /* border-radius: 50px; */
     padding: 24px 48px;
-    margin-right: 24px;
+    margin-right: -24px;
+    margin-left: 48px;
     box-shadow: var(--shadow-low);
 }
 
@@ -168,7 +169,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-    border: 2px solid var(--accent);
+    border: 2px solid var(--secondary);
     /* border-color: var(--secondary); */
     outline: 4px;
 }
@@ -512,9 +513,11 @@ textarea:focus {
 
     .profile {
         padding: 0px 24px 32px;
-        border: 6px solid var(--accent);
+        border: 0;
+        border-top: 6px solid var(--accent);
+        border-bottom: 6px solid var(--accent);
         box-shadow: var(--shadow-low);
-        margin: 70px 16px 100px;
+        margin: 70px 0 100px;
     }
 
     .heroes {
